# chromatic

./: .gitignore  CMakeLists.txt  LICENSE  README.md  chromatic.cpp  chromatic.hpp  graph.cpp  graph.hpp  test.cpp
fixtures/: dsatur.col
